<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".HomeScreen"
    android:background="@color/primary"
    android:id="@+id/FitnessSchedules"
    android:weightSum="1"
    android:focusable="false"
    android:orientation="vertical">

    <GridView
        android:numColumns="3"
        android:layout_width="match_parent"
        android:layout_height="305dp"
        android:id="@+id/gridView"
        android:columnWidth="50dp"
        android:stretchMode="columnWidth"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/schedule_activity_add_workout"
        android:id="@+id/addWorkoutButton"
        android:clickable="true"
        android:textStyle="bold"
        android:textSize="25sp"
        android:background="@drawable/button_shp_rvrs_press"
        android:layout_marginBottom="5dp"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/schedule_add_workout_button"
        android:id="@+id/schedule_activity_edit_workout"
        android:clickable="true"

        android:textStyle="bold"
        android:textSize="25sp"

        android:background="@drawable/button_shp_rvrs_press"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/schedule_back_button"
        android:id="@+id/schedule_back_button"
        android:clickable="true"
        android:textStyle="bold"
        android:textSize="25sp"
        android:background="@drawable/button_shp_rvrs_press"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp" />

</LinearLayout>
